
[project]
name = "synthesis_superrare"
version = "0.1.0"
description = "A generative art pipeline that turns agent decisions, market states, and execution summaries into mintable media and auction plans."
readme = "README.md"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.13"
